--- a/Accomplice.cfg
+++ b/Accomplice.cfg
@@ -301,63 +301,65 @@ Button=82,18,12,3,"Custom","scpcustom.dlg",W
 
 [Items static]
 Frame=0,5,18,19,"Stairs"
-Button=1,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=1,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=1,11,16,13,"list",stastair.lst
 Frame=19,5,18,19,"Floor"
-Button=20,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=20,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=20,11,16,13,"list",stafloor.lst
 Frame=38,5,18,19,"Walls"
-Button=39,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=39,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=39,11,16,13,"list",stawalls.lst
 Frame=57,5,18,19,"Roofs"
-Button=58,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=58,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=58,11,16,13,"list",staroof.lst
 Frame=76,5,18,19,"Carpets"
-Button=77,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=77,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=77,11,16,13,"list",stacarpet.lst
 Frame=95,5,18,19,"Doors"
-Button=96,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=96,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=96,11,16,13,"list",stadoor.lst
 Frame=114,5,18,19,"Fireplaces"
-Button=115,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=115,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=115,11,16,13,"list",stafireplace.lst
 Frame=133,5,18,19,"Signs/Posts"
-Button=134,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=134,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=134,11,16,13,"list",stasign.lst
 Frame=153,5,10,19,"Edit"
 Button=154,8,8,3,"Tweak","tweak",N
-Button=154,12,8,3,"Remove","remove",N
+Button=154,12,8,3,"Move","move",N
 Button=154,16,8,3,"Where","where",N
+Button=154,20,8,3,"Wipe","wipe rect",N
 
 [Items static 2]
 Frame=0,5,18,20,"Misc/Multis"
-Button=1,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=1,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=1,11,16,13,"list",stamisc.lst
 Frame=19,5,18,20,"Lightsources"
-Button=20,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=20,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=20,11,16,13,"list",stalight.lst
 Frame=38,5,18,20,"Fight/Dead/Torture"
-Button=39,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=39,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=39,11,16,13,"list",stadead.lst
 Frame=57,5,18,20,"Plants"
-Button=58,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=58,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=58,11,16,13,"list",staplant.lst
 Frame=76,5,18,20,"Environment"
-Button=77,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=77,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=77,11,16,13,"list",staoutside.lst
 Frame=95,5,18,20,"Skillstuff"
-Button=96,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=96,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=96,11,16,13,"list",staskill.lst
 Frame=114,5,18,20,"Food"
-Button=115,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=115,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=115,11,16,13,"list",stafood.lst
 Frame=133,5,18,20,"Furniture"
-Button=134,7,16,3,"Add Line/Square","tile",HH,"list"
+Button=134,7,16,3,"Add Line/Square","tile",S,"list"
 Listbox=134,11,16,13,"list",stafurniture.lst
 Frame=153,5,10,16,"Edit"
 Button=154,8,8,3,"Tweak","tweak",N
-Button=154,12,8,3,"Remove","remove",N
+Button=154,12,8,3,"Move","move",N
 Button=154,16,8,3,"Where","where",N
+Button=154,20,8,3,"Wipe","wipe rect",N
 
 [Server1]
 Button=0,6,23,3,"Save","save",N
