updates and additions to get the gm tool update finished after ingame command rewrite

--- a/Accomplice.cfg
+++ b/Accomplice.cfg
@@ -2,6 +2,7 @@ name=Horizontal Nox-wizard complete
 Version=1.0
 Creator=Horian, modified version basing on snowmiser's horizontal Accomplice
 Desc=Custom horizontal Accomplice scripts for Nox-wizard
+
 horizontal=true
 XSize=1000
 YSize=180
@@ -253,23 +254,28 @@ Button=41,12,8,3,"Name","rename n",S,PROMPT,"Enter name."
 Button=41,16,8,3,"Flip","flip",N
 //Button=41,8,8,3,"Glow","glow",N
 //Button=41,12,8,3,"Unglow","unglow",N
-Frame=60,5,32,16,"Move"
-Button=62,8,8,3,"NewX","move a",D,PROMPT,"Enter new x."
-Button=62,12,8,3,"NewY","move a _",D,PROMPT,"Enter new y."
-Button=62,16,8,3,"NewZ","move a _ _",D,PROMPT,"Enter new z."
-Button=72,8,9,3,"To Target","move",N
-Button=72,12,9,3,"To Bag","move bag",N
-Button=72,16,9,3,"To Feet","move here",N
-Button=83,8,7,3,"IncX","move r",D,PROMPT,"Enter new x relative to old one."
-Button=83,12,7,3,"IncY","move r _",D,PROMPT,"Enter new y relative to old one."
-Button=83,16,7,3,"IncZ","move r _ _",D,PROMPT,"Enter new z relative to old one."
-Button=93,6,8,3,"Stats","stats",N
-Button=93,10,8,3,"Remove","wipe",N
-Button=93,14,8,3,"Where","where",N
-Button=103,6,18,3,"Wipe Inside (click)","wipe rec",N
+
+Button=60,6,8,3,"Stats","stats",N
+Button=60,10,8,3,"Remove","wipe",N
+Button=60,14,8,3,"Where","where",N
+Button=60,18,8,3,"Wipe","wipe rec",N
 //Button=103,10,18,3,"Wipe Outside (click)","wipe",N
 //Button=103,14,18,3,"Wipe All","iwipe 1 1 2 2",N
 //Button=103,18,18,3,"Decay All","cleaup",N
+Frame=113,5,36,20,"Re-Position"
+Label=114,8,8,3,"Absolute"
+Button=115,12,4,3,"X","move a",D,PROMPT,"Enter new x."
+Button=115,16,4,3,"Y","move a _",D,PROMPT,"Enter new y."
+Button=115,20,4,3,"Z","move a _ _",D,PROMPT,"Enter new z."
+Label=123,8,8,3,"Relative"
+Button=124,12,4,3,"X","move r",D,"repolist"
+Button=124,16,4,3,"Y","move r _",D,"repolist"
+Button=124,20,4,3,"Z","move r _ _,D,"repolist"
+Listbox=130,8,8,16,"repolist",reposition.lst
+Label=141,8,7,3,"Move to"
+Button=141,12,6,3,"Target","move",N
+Button=141,16,6,3,"Bag","move bag",N
+Button=141,20,6,3,"Feet","move here",N
 
 [Items scripted]
 Button=0,6,12,3,"GM Menu","scpgm.dlg",W
@@ -299,67 +305,132 @@ Button=82,10,12,3,"Jewlery","scpjewel.dlg",W
 Button=82,14,12,3,"Misc","scpmisc.dlg",W
 Button=82,18,12,3,"Custom","scpcustom.dlg",W
 
-[Items static]
-Frame=0,5,18,19,"Stairs"
-Button=1,7,16,3,"Add Line/Square","tile",S,"list"
+[Buildings]
+Frame=0,5,18,20,"Stairs"
+Button=1,7,4,3,"Tile","tile",S,"list"
+Button=6,7,11,3,"Continous","add",S,"list"
 Listbox=1,11,16,13,"list",stastair.lst
-Frame=19,5,18,19,"Floor"
-Button=20,7,16,3,"Add Line/Square","tile",S,"list"
+Frame=19,5,18,20,"Floor"
+Button=20,7,4,3,"Tile","tile",S,"list"
+Button=25,7,11,3,"Continous","add",S,"list"
 Listbox=20,11,16,13,"list",stafloor.lst
-Frame=38,5,18,19,"Walls"
-Button=39,7,16,3,"Add Line/Square","tile",S,"list"
+Frame=38,5,18,20,"Walls"
+Button=39,7,4,3,"Tile","tile",S,"list"
+Button=44,7,11,3,"Continous","add",S,"list"
 Listbox=39,11,16,13,"list",stawalls.lst
-Frame=57,5,18,19,"Roofs"
-Button=58,7,16,3,"Add Line/Square","tile",S,"list"
+Frame=57,5,18,20,"Roofs"
+Button=58,7,4,3,"Tile","tile",S,"list"
+Button=63,7,11,3,"Continous","add",S,"list"
 Listbox=58,11,16,13,"list",staroof.lst
-Frame=76,5,18,19,"Carpets"
-Button=77,7,16,3,"Add Line/Square","tile",S,"list"
+Frame=76,5,18,20,"Carpets"
+Button=77,7,4,3,"Tile","tile",S,"list"
+Button=82,7,11,3,"Continous","add",S,"list"
 Listbox=77,11,16,13,"list",stacarpet.lst
-Frame=95,5,18,19,"Doors"
-Button=96,7,16,3,"Add Line/Square","tile",S,"list"
+Frame=95,5,18,20,"Doors"
+Button=96,7,4,3,"Tile","tile",S,"list"
+Button=101,7,11,3,"Continous","add",S,"list"
 Listbox=96,11,16,13,"list",stadoor.lst
-Frame=114,5,18,19,"Fireplaces"
-Button=115,7,16,3,"Add Line/Square","tile",S,"list"
-Listbox=115,11,16,13,"list",stafireplace.lst
-Frame=133,5,18,19,"Signs/Posts"
-Button=134,7,16,3,"Add Line/Square","tile",S,"list"
-Listbox=134,11,16,13,"list",stasign.lst
-Frame=153,5,10,19,"Edit"
+Frame=115,5,36,20,"Re-Position"
+Label=116,8,8,3,"Absolute"
+Button=117,12,4,3,"X","move a",D,PROMPT,"Enter new x."
+Button=117,16,4,3,"Y","move a _",D,PROMPT,"Enter new y."
+Button=117,20,4,3,"Z","move a _ _",D,PROMPT,"Enter new z."
+Label=125,8,8,3,"Relative"
+Button=126,12,4,3,"X","move r",D,"repolist"
+Button=126,16,4,3,"Y","move r _",D,"repolist"
+Button=126,20,4,3,"Z","move r _ _,D,"repolist"
+Listbox=132,8,8,16,"repolist",reposition.lst
+Label=143,8,7,3,"Move to"
+Button=143,12,6,3,"Target","move",N
+Button=143,16,6,3,"Bag","move bag",N
+Button=143,20,6,3,"Feet","move here",N
+Frame=153,5,10,20,"Edit"
 Button=154,8,8,3,"Tweak","tweak",N
-Button=154,12,8,3,"Move","move",N
-Button=154,16,8,3,"Where","where",N
-Button=154,20,8,3,"Wipe","wipe rect",N
+//Button=154,12,8,3,"Move","move",N
+Button=154,12,8,3,"Where","where",N
+Button=154,16,8,3,"Wipe","wipe rect",N
 
-[Items static 2]
-Frame=0,5,18,20,"Misc/Multis"
-Button=1,7,16,3,"Add Line/Square","tile",S,"list"
-Listbox=1,11,16,13,"list",stamisc.lst
-Frame=19,5,18,20,"Lightsources"
-Button=20,7,16,3,"Add Line/Square","tile",S,"list"
-Listbox=20,11,16,13,"list",stalight.lst
-Frame=38,5,18,20,"Fight/Dead/Torture"
-Button=39,7,16,3,"Add Line/Square","tile",S,"list"
-Listbox=39,11,16,13,"list",stadead.lst
-Frame=57,5,18,20,"Plants"
-Button=58,7,16,3,"Add Line/Square","tile",S,"list"
-Listbox=58,11,16,13,"list",staplant.lst
-Frame=76,5,18,20,"Environment"
-Button=77,7,16,3,"Add Line/Square","tile",S,"list"
-Listbox=77,11,16,13,"list",staoutside.lst
+[Decoration 1]
+Frame=0,5,18,20,"Fireplaces"
+Button=1,7,4,3,"Tile","tile",S,"list"
+Button=6,7,11,3,"Continous","add",S,"list"
+Listbox=1,11,16,13,"list",stafireplace.lst
+Frame=19,5,18,20,"Signs/Posts"
+Button=20,7,4,3,"Tile","tile",S,"list"
+Button=25,7,11,3,"Continous","add",S,"list"
+Listbox=20,11,16,13,"list",stasign.lst
+Frame=38,5,18,20,"Lightsources"
+Button=39,7,4,3,"Tile","tile",S,"list"
+Button=44,7,11,3,"Continous","add",S,"list"
+Listbox=39,11,16,13,"list",stalight.lst
+Frame=57,5,18,20,"Furniture"
+Button=58,7,4,3,"Tile","tile",S,"list"
+Button=63,7,11,3,"Continous","add",S,"list"
+Listbox=58,11,16,13,"list",stafurniture.lst
+Frame=76,5,18,20,"Misc/Multis"
+Button=77,7,4,3,"Tile","tile",S,"list"
+Button=82,7,11,3,"Continous","add",S,"list"
+Listbox=77,11,16,13,"list",stamisc.lst
 Frame=95,5,18,20,"Skillstuff"
-Button=96,7,16,3,"Add Line/Square","tile",S,"list"
+Button=96,7,4,3,"Tile","tile",S,"list"
+Button=101,7,11,3,"Continous","add",S,"list"
 Listbox=96,11,16,13,"list",staskill.lst
-Frame=114,5,18,20,"Food"
-Button=115,7,16,3,"Add Line/Square","tile",S,"list"
-Listbox=115,11,16,13,"list",stafood.lst
-Frame=133,5,18,20,"Furniture"
-Button=134,7,16,3,"Add Line/Square","tile",S,"list"
-Listbox=134,11,16,13,"list",stafurniture.lst
-Frame=153,5,10,16,"Edit"
+Frame=115,5,36,20,"Re-Position"
+Label=116,8,8,3,"Absolute"
+Button=117,12,4,3,"X","move a",D,PROMPT,"Enter new x."
+Button=117,16,4,3,"Y","move a _",D,PROMPT,"Enter new y."
+Button=117,20,4,3,"Z","move a _ _",D,PROMPT,"Enter new z."
+Label=125,8,8,3,"Relative"
+Button=126,12,4,3,"X","move r",D,"repolist"
+Button=126,16,4,3,"Y","move r _",D,"repolist"
+Button=126,20,4,3,"Z","move r _ _,D,"repolist"
+Listbox=132,8,8,16,"repolist",reposition.lst
+Label=143,8,7,3,"Move to"
+Button=143,12,6,3,"Target","move",N
+Button=143,16,6,3,"Bag","move bag",N
+Button=143,20,6,3,"Feet","move here",N
+Frame=153,5,10,20,"Edit"
 Button=154,8,8,3,"Tweak","tweak",N
-Button=154,12,8,3,"Move","move",N
-Button=154,16,8,3,"Where","where",N
-Button=154,20,8,3,"Wipe","wipe rect",N
+//Button=154,12,8,3,"Move","move",N
+Button=154,12,8,3,"Where","where",N
+Button=154,16,8,3,"Wipe","wipe rect",N
+
+[Decoration 2]
+Frame=0,5,18,20,"Environment"
+Button=1,7,4,3,"Tile","tile",S,"list"
+Button=6,7,11,3,"Continous","add",S,"list"
+Listbox=1,11,16,13,"list",staoutside.lst
+Frame=19,5,18,20,"Plants"
+Button=20,7,4,3,"Tile","tile",S,"list"
+Button=25,7,11,3,"Continous","add",S,"list"
+Listbox=20,11,16,13,"list",staplant.lst
+Frame=38,5,18,20,"Food"
+Button=39,7,4,3,"Tile","tile",S,"list"
+Button=44,7,11,3,"Continous","add",S,"list"
+Listbox=39,11,16,13,"list",stafood.lst
+Frame=57,5,18,20,"Fight/Dead/Torture"
+Button=58,7,4,3,"Tile","tile",S,"list"
+Button=63,7,11,3,"Continous","add",S,"list"
+Listbox=58,11,16,13,"list",stadead.lst
+Frame=115,5,36,20,"Re-Position"
+Label=116,8,8,3,"Absolute"
+Button=117,12,4,3,"X","move a",D,PROMPT,"Enter new x."
+Button=117,16,4,3,"Y","move a _",D,PROMPT,"Enter new y."
+Button=117,20,4,3,"Z","move a _ _",D,PROMPT,"Enter new z."
+Label=125,8,8,3,"Relative"
+Button=126,12,4,3,"X","move r",D,"repolist"
+Button=126,16,4,3,"Y","move r _",D,"repolist"
+Button=126,20,4,3,"Z","move r _ _,D,"repolist"
+Listbox=132,8,8,16,"repolist",reposition.lst
+Label=143,8,7,3,"Move to"
+Button=143,12,6,3,"Target","move",N
+Button=143,16,6,3,"Bag","move bag",N
+Button=143,20,6,3,"Feet","move here",N
+Frame=153,5,10,20,"Edit"
+Button=154,8,8,3,"Tweak","tweak",N
+//Button=154,12,8,3,"Move","move",N
+Button=154,12,8,3,"Where","where",N
+Button=154,16,8,3,"Wipe","wipe rect",N
 
 [Server1]
 Button=0,6,23,3,"Save","save",N
