updates and additions to get the gm tool update finished after ingame command rewrite

--- a/Accomplice.cfg
+++ b/Accomplice.cfg
@@ -349,6 +349,7 @@ Button=154,8,8,3,"Tweak","tweak",N
 //Button=154,12,8,3,"Move","move",N
 Button=154,12,8,3,"Where","where",N
 Button=154,16,8,3,"Wipe","wipe rect",N
+Button=154,20,8,3,"Flip","flip",N
 
 [Decoration 1]
 Frame=0,5,18,20,"Fireplaces"
@@ -394,6 +395,7 @@ Button=154,8,8,3,"Tweak","tweak",N
 //Button=154,12,8,3,"Move","move",N
 Button=154,12,8,3,"Where","where",N
 Button=154,16,8,3,"Wipe","wipe rect",N
+Button=154,20,8,3,"Flip","flip",N
 
 [Decoration 2]
 Frame=0,5,18,20,"Environment"
@@ -431,6 +433,7 @@ Button=154,8,8,3,"Tweak","tweak",N
 //Button=154,12,8,3,"Move","move",N
 Button=154,12,8,3,"Where","where",N
 Button=154,16,8,3,"Wipe","wipe rect",N
+Button=154,20,8,3,"Flip","flip",N
 
 [Server1]
 Button=0,6,23,3,"Save","save",N
