updates and additions to get the gm tool update finished after ingame command rewrite

--- a/Accomplice.cfg
+++ b/Accomplice.cfg
@@ -18,12 +18,12 @@ Button=0,14,9,3,"Kill","kill",N
 Button=0,18,9,3,"Kill-Bolt","bolt",N
 Button=10,6,9,3,"Freeze","freeze on",N
 Button=10,10,9,3,"Unfreeze","freeze off",N
-Button=20,6,11,3,"Make Admin","privlevel 255",N
-Button=20,10,11,3,"Make GM","privlevel 200",N
-Button=20,14,11,3,"Make Seer","privlevel 150",N
-Button=20,18,11,3,"Make Cns","privlevel 100",N
-Button=32,6,11,3,"Make Player","privlevel 50",N
-Button=32,10,11,3,"Make Guest","privlevel 0",N
+Button=20,6,11,3,"Make Admin","setpriv 255",N
+Button=20,10,11,3,"Make GM","setpriv 200",N
+Button=20,14,11,3,"Make Seer","setpriv 150",N
+Button=20,18,11,3,"Make Cns","setpriv 100",N
+Button=32,6,11,3,"Make Player","setpriv 50",N
+Button=32,10,11,3,"Make Guest","setpriv 0",N
 Button=46,6,9,3,"No Decay","decay off",N
 Button=46,10,9,3,"Decay","decay",D,PROMPT,"Enter time in seconds for decay"
 Button=46,14,9,3,"Remove","wipe",N
