added fountain deeds and fixed an error with bed deeds

--- a/Accomplice.cfg
+++ b/Accomplice.cfg
@@ -1,7 +1,7 @@
 name=Horizontal Nox-wizard complete
 Version=1.0
 Creator=Horian, modified version basing on snowmiser's horizontal Accomplice
-Desc=Custom horizontal Accomplice scripts for Nox-wizard
+Desc=Custom horizontal Accomplice scripts for Nox-Wizard UO Emulator (noxwizard.sourceforge.net)
 
 horizontal=true
 XSize=1000
