added game scripts

--- a/Accomplice.cfg
+++ b/Accomplice.cfg
@@ -30,7 +30,7 @@ Button=46,14,9,3,"Remove","wipe",N
 Button=46,18,9,3,"Wipe","wipe rect",N
 Button=56,6,9,3,"Dupe","dupe",D,PROMPT,"Enter amount to get"
 Button=56,10,9,3,"Dye","dye",DDS,PROMPT,"0x00 0x00 or decimal _, plus t for target"
-Button=56,14,9,3,"Rename","rename",S,PROMPT,"Enter name."
+Button=56,14,9,3,"Rename","rename n",S,PROMPT,"Enter name."
 Button=56,18,9,3,"Tweak","tweak",N
 Button=66,6,11,3,"Hide Skill","hiding on skill",N
 Button=66,10,11,3,"Unhide Skill","hiding off skill",N
@@ -90,7 +90,7 @@ Button=119,18,18,3,"Which Race","racegate.dlg",W
 Button=138,6,12,3,"Remove","wipe",N
 Button=138,10,12,3,"Movability","iset mo",D,PROMPT,"0: all, 1:cns and gm 2:only gm"
 Button=151,10,9,3,"Dye","dye",DDS,PROMPT,"0x00 0x00 or decimal _, plus t for target"
-Button=151,14,9,3,"Rename","rename",S,PROMPT,"Enter name."
+Button=151,14,9,3,"Rename","rename n",S,PROMPT,"Enter name."
 Button=151,18,9,3,"Tweak","tweak",N
 Button=151,18,9,3,"Where","where",N
 
@@ -227,7 +227,7 @@ Button=46,6,19,3,"7) Set NPC Spawner","settype 62",N
 Button=46,10,19,3,"7) Set Item Spawner","settype 61",N
 Button=46,14,19,3,"7) Set Escort Spawn","settype 125",N
 Button=46,18,19,3,"8) Set Amount","setamount",D,PROMPT,"Enter amount to spawn."
-Button=66,6,19,3,"9) Rename Dummy","rename",S,PROMPT,"Enter name."
+Button=66,6,19,3,"9) Rename Dummy","rename n",S,PROMPT,"Enter name."
 Button=66,10,19,3,"Remove","remove",N
 Button=86,6,20,3,"Respawn","respawn",N
 Button=86,10,20,3,"Spawn this region","regspawn",N
