fixed move and incz problems

--- a/Accomplice.cfg
+++ b/Accomplice.cfg
@@ -18,12 +18,12 @@ Button=0,14,9,3,"Kill","kill",N
 Button=0,18,9,3,"Kill-Bolt","bolt",N
 Button=10,6,9,3,"Freeze","freeze on",N
 Button=10,10,9,3,"Unfreeze","freeze off",N
-Button=20,6,11,3,"Make Admin","privlevel 255",N
-Button=20,10,11,3,"Make GM","privlevel 200",N
-Button=20,14,11,3,"Make Seer","privlevel 150",N
-Button=20,18,11,3,"Make Cns","privlevel 100",N
-Button=32,6,11,3,"Make Player","privlevel 50",N
-Button=32,10,11,3,"Make Guest","privlevel 0",N
+Button=20,6,11,3,"Make Admin","setpriv 255",N
+Button=20,10,11,3,"Make GM","setpriv 200",N
+Button=20,14,11,3,"Make Seer","setpriv 150",N
+Button=20,18,11,3,"Make Cns","setpriv 100",N
+Button=32,6,11,3,"Make Player","setpriv 50",N
+Button=32,10,11,3,"Make Guest","setpriv 0",N
 Button=46,6,9,3,"No Decay","decay off",N
 Button=46,10,9,3,"Decay","decay",D,PROMPT,"Enter time in seconds for decay"
 Button=46,14,9,3,"Remove","wipe",N
@@ -338,7 +338,7 @@ Button=117,20,4,3,"Z","move a _ _",D,PROMPT,"Enter new z."
 Label=125,8,8,3,"Relative"
 Button=126,12,4,3,"X","move r",D,"repolist"
 Button=126,16,4,3,"Y","move r _",D,"repolist"
-Button=126,20,4,3,"Z","move r _ _,D,"repolist"
+Button=126,20,4,3,"Z","move r _ _",D,"repolist"
 Listbox=132,8,8,16,"repolist",reposition.lst
 Label=143,8,7,3,"Move to"
 Button=143,12,6,3,"Target","move",N
@@ -384,7 +384,7 @@ Button=117,20,4,3,"Z","move a _ _",D,PROMPT,"Enter new z."
 Label=125,8,8,3,"Relative"
 Button=126,12,4,3,"X","move r",D,"repolist"
 Button=126,16,4,3,"Y","move r _",D,"repolist"
-Button=126,20,4,3,"Z","move r _ _,D,"repolist"
+Button=126,20,4,3,"Z","move r _ _",D,"repolist"
 Listbox=132,8,8,16,"repolist",reposition.lst
 Label=143,8,7,3,"Move to"
 Button=143,12,6,3,"Target","move",N
@@ -399,21 +399,21 @@ Button=154,20,8,3,"Flip","flip",N
 
 [Decoration 2]
 Frame=0,5,18,20,"Environment"
-Button=1,7,4,3,"Tile","tile",S,"list"
-Button=6,7,11,3,"Continous","add",S,"list"
-Listbox=1,11,16,13,"list",staoutside.lst
+Button=1,7,4,3,"Tile","tile",S,"elist"
+Button=6,7,11,3,"Continous","add",S,"elist"
+Listbox=1,11,16,13,"elist",staoutside.lst
 Frame=19,5,18,20,"Plants"
-Button=20,7,4,3,"Tile","tile",S,"list"
-Button=25,7,11,3,"Continous","add",S,"list"
-Listbox=20,11,16,13,"list",staplant.lst
+Button=20,7,4,3,"Tile","tile",S,"plist"
+Button=25,7,11,3,"Continous","add",S,"plist"
+Listbox=20,11,16,13,"plist",staplant.lst
 Frame=38,5,18,20,"Food"
-Button=39,7,4,3,"Tile","tile",S,"list"
-Button=44,7,11,3,"Continous","add",S,"list"
-Listbox=39,11,16,13,"list",stafood.lst
+Button=39,7,4,3,"Tile","tile",S,"flist"
+Button=44,7,11,3,"Continous","add",S,"flist"
+Listbox=39,11,16,13,"flist",stafood.lst
 Frame=57,5,18,20,"Fight/Dead/Torture"
-Button=58,7,4,3,"Tile","tile",S,"list"
-Button=63,7,11,3,"Continous","add",S,"list"
-Listbox=58,11,16,13,"list",stadead.lst
+Button=58,7,4,3,"Tile","tile",S,"dlist"
+Button=63,7,11,3,"Continous","add",S,"dlist"
+Listbox=58,11,16,13,"dlist",stadead.lst
 Frame=115,5,36,20,"Re-Position"
 Label=116,8,8,3,"Absolute"
 Button=117,12,4,3,"X","move a",D,PROMPT,"Enter new x."
@@ -422,7 +422,7 @@ Button=117,20,4,3,"Z","move a _ _",D,PROMPT,"Enter new z."
 Label=125,8,8,3,"Relative"
 Button=126,12,4,3,"X","move r",D,"repolist"
 Button=126,16,4,3,"Y","move r _",D,"repolist"
-Button=126,20,4,3,"Z","move r _ _,D,"repolist"
+Button=126,20,4,3,"Z","move r _ _",D,"repolist"
 Listbox=132,8,8,16,"repolist",reposition.lst
 Label=143,8,7,3,"Move to"
 Button=143,12,6,3,"Target","move",N
